# museum-analytics

./: .gitignore  README.md  generate-taxonomies.R  makefile  museum-survival-analysis.Rmd  museums-and-population.Rmd
mm-db-manager/cloud/: .env.example  README.md  devserver.py  main.py  makefile  output.html  pyproject.toml  requirements.txt
mm-db-manager/cloud/src/mm_db_cloud/: app.py
mm-db-manager/cloud/src/mm_db_cloud/config/: allowed_values.py  sheet_config.py
mm-db-manager/cloud/src/mm_db_cloud/handlers/: _pinned_sheet.py  add.py  add_museums.py  delete_permanent.py  edit.py  edit_museums.py  permanently_delete_museums.py  restore.py  restore_museums.py  trash.py  trash_museums.py
mm-db-manager/cloud/src/mm_db_cloud/models/: add.py  add_museums.py  common.py  edit.py  (+8 more)
mm-db-manager/cloud/tests/: conftest.py
mm-db-manager/cloud/tests/integration/: test_lifecycle_real_sheet.py
mm-db-manager/cloud/tests/unit/: test_add_museums_service.py  test_auth.py  test_edit_museums_service.py  test_handlers.py  test_models_common.py  test_permanently_delete_museums_service.py  test_restore_museums_service.py  test_sheet_service_apply_ops.py  test_trash_museums_service.py  test_validators.py
mm-db-snapshot-publisher/cloud/: main.py  pyproject.toml  requirements.txt  run_local.py
mm-db-snapshot-publisher/cloud/mm_db_snapshot_publisher/: cloud_storage_utils.py  google_utils.py  postcode_geo_db.py
mm-db-snapshot-publisher/cloud/src/mm_db_snapshot_publisher/: __init__.py  google_utils.py  museum_search_preprocessor.py  postcode_to_lat_long.py
notes-to-taxonomy/: main.py  pyproject.toml  run_cluster_labelling_experiment.py  run_taxonomy_building_experiment.py
notes-to-taxonomy/experiment-configs/: cluster-labelling-local.json  cluster-labelling.json  taxonomy-building-local.json  taxonomy-building.json
notes-to-taxonomy/src/: __init__.py  cluster_labeller.py  experiment.py  experiment_runner.py  label_definer.py  llm.py  note_labeller.py  pipeline.py  sentence_model.py  taxonomy_builder.py  taxonomy_judge.py
notes-to-taxonomy/src/experiment_runners/: __init__.py  doc_labelling_experiment_runner.py
notes-to-taxonomy/src/experiments/: __init__.py  cluster_labelling_experiment.py  doc_labelling_experiment.py  taxonomy_building_experiment.py
notes-to-taxonomy/src/label_definers/: __init__.py  label_definer_llm.py  label_definer_note.py  label_definer_wiki.py
notes-to-taxonomy/src/llms/: __init__.py  completion_llm.py  seq_2_seq_llm.py
notes-to-taxonomy/tests/unit/: test_cluster_labeller.py  test_note_labeller.py  test_taxonomy_builder.py  test_taxonomy_judge.py
notes-to-taxonomy/tests/unit/label_definers/: test_label_definer_llm.py  test_label_definer_wiki.py
sheet-to-graph/cloud/: Pipfile  backup_and_anonymize_dispersal_spreadsheet.py  config.json  main.py  pyproject.toml  requirements.txt  translate.py
sheet-to-graph/cloud/sheet_to_graph/: __init__.py  excel_writer.py  file_loader.py  neo4j_connection.py  postcode_to_lat_long.py  postcode_to_lat_long_local.py
sheet-to-graph/cloud/sheet_to_graph/columns/: reference_column.py
sheet-to-graph/cloud/sheet_to_graph/sheet_sources/: base.py  csv_sheet_source.py  excel_sheet_source.py
sheet-to-graph/cloud/tests/unit/: test_file_loader.py
(+271 files in other folders)
