[project]
name = "notes-to-taxonomy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.8.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "sentence-transformers>=5.2.0",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "pytest>=9.0.2",
]
