[project]
name = "sheet-to-graph"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pandas",
  "requests",
  "google-api-python-client",
  "google-auth-oauthlib",
  "geopy",
  "edtf",
  "bng-latlon",
  "functions-framework>=3.10.1",
  "google-auth>=2.48.0",
  "google-auth-httplib2>=0.3.0",
  "python-dotenv>=1.2.1",
  "google-cloud-storage>=3.9.0",
]

[project.optional-dependencies]
excel = [
  "openpyxl",
] # if you need to read from excel

neo4j = [
  "neo4j",
] # if you need to generate a neo4j database

dev = [
  "pytest",
]
